--- a/requirements.txt
+++ b/requirements.txt
@@ -67,6 +67,7 @@ tvdb-api==1.10
 Twisted==16.0.0
 urllib3==1.21.1
 w3lib==1.11.0
+whitenoise==3.3.0
 wikipedia==1.4.0
 wptools==0.2.3
 yahoo-finance==1.4.0
